[package]
name = "debrepobuilder"
version = "0.1.0"
description = "Build and maintain Debian repositories with a TOML config"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/pop-os/debrepbuild"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]

[[bin]]
name = "debrep"
path = "src/main.rs"

[dependencies]
apt-repo-crawler = { git = "https://github.com/pop-os/apt-repo-crawler" }
bus_writer = "0.1"
cascade = "0.1.2"
clap = "2.32.0"
crossbeam-channel = "0.2.6"
deb-version = "0.1.0"
debarchive = "0.1.0"
deflate = { version = "0.7.18", features = ["gzip"] }
digest = "0.7.5"
failure = "0.1.1"
failure_derive = "0.1.1"
fern = "0.5.6"
glob = "0.2.11"
hex-view = "0.1.2"
itertools = "0.7.8"
libc = "0.2"
libflate = "0.1.18"
log = { version = "0.4.3" }
md-5 = "0.7.0"
parallel-getter = "0.2.0"
rayon = "1.0.2"
regex = "1.0.5"
reqwest = "0.9"
select = "0.4.2"
serde = "1.0.43"
serde_derive = "1.0.43"
sha-1 = "0.7.0"
sha2 = "0.7.1"
subprocess = "0.1.13"
tempdir = "0.3.7"
tempfile = "3.0.3"
toml = "0.4.6"
utime = "=0.2.1"
walkdir = "2.1.4"
xz2 = "0.1.5"

[build-dependencies]
vergen = "0.1.1"
