[package]
name = "debrepobuilder"
version = "0.1.0"
description = "Build and maintain Debian repositories with a TOML config"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/pop-os/debrepbuild"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
edition = "2018"

[[bin]]
name = "debrep"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.42"
apt-repo-crawler = { git = "https://github.com/pop-os/apt-repo-crawler" }
bus_writer = "0.1"
clap = "2.32.0"
crossbeam-channel = "0.5"
deb-version = "0.1.0"
debarchive = "0.2"
deflate = { version = "0.9", features = ["gzip"] }
digest = "0.9"
failure = "0.1.1"
failure_derive = "0.1.1"
fern = "0.6"
futures-lite = "1.12.0"
glob = "0.3"
hex-view = "0.1.2"
itertools = "0.10"
libc = "0.2"
libflate = "1.1"
log = { version = "0.4.3" }
md-5 = "0.9"
rayon = "1.0"
regex = "1.0"
reqwest = "0.11"
select = "0.5"
serde = "1.0.43"
serde_derive = "1.0.43"
sha-1 = "0.9"
sha2 = "0.9"
subprocess = "0.2"
tempdir = "0.3"
tempfile = "3.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
utime = "0.3"
walkdir = "2"
xz2 = "0.1.5"
zstd = "0.9"

[build-dependencies]
vergen = "0.1.1"
